Add section new skills

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
                 <h2>More about me:</h2>
                     <p>I have a lot of skills! Like eye to details and colours.</p>
             </section>
+			<section class="recent">
+				<h2>New skills</h2>
+				<p>Recently I've gained new skills, like coding useing RWD and useing GIT</p>
+			</section>
         </main>
         <footer>
         <p>You will find me on: <a href="https://www.facebook.com/kasia.kosmo.kosmicka" target="_blank">Facebook</a> | <a href="https://www.linkedin.com/in/katarzyna-kosmicka-732101136/?locale=de_DE" target="_blank">LinkedIn</a></p>
