Add second paragraph to section new skills

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 			<section class="recent">
 				<h2>New skills</h2>
 				<p>Recently I've gained new skills, like coding useing RWD and useing GIT</p>
+				<p>I hope I will have learned JavaScript soon<p>
 			</section>
         </main>
         <footer>
